# dotcam

./: Cargo.toml  README  README.md  rust-toolchain.toml
assets/shaders/: choreographer.wgsl  dotpainter.wgsl  downscale.wgsl  downscaler.wgsl  gradiator.wgsl
src/: camera_feed.rs  cpu.rs  gpu.rs  main.rs  pipeline.rs
src/cpu/: filter.rs  vector_field.rs
src/gpu/: choreographer.rs  downscaler.rs  gradiator.rs  shaders.rs
