[package]
name = "dotcam"
version = "0.1.0"
edition = "2021"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.10.1" }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
convolve2d = { version = "0.1.0", features = ["image"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
futures-lite = "1.13.0"
image = "0.24.6"
itertools = "0.10.5"
keyde = "0.2.4"
nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"] }
rand = "0.8.5"
