[package]
name = "dotcam"
version = "0.1.0"
edition = "2021"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.10.1" }
bevy-inspector-egui = "0.18.3"
bevy_app_compute = "0.10.3"
bevy_egui = "0.20.3"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
futures-lite = "1.13.0"
image = "0.24.6"
# use nokhwa from git upstream https://github.com/l1npengtul/nokhwa, branch 0.10
#
# the crates.io version has a deadlock issue, see https://github.com/l1npengtul/nokhwa/pull/112. switch back when this fix gets released.
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", branch = "0.10", features = ["input-native", "output-threaded"] }
# nokhwa = { version = "0.10.4", features = ["input-native", "output-threaded"] }
rand = "0.8.5"
safe-transmute = "0.11.2"

[features]
simd = []
default = ["simd", "gpu"]
cpu = []
gpu = []
